[gd_scene load_steps=6 format=2]

[ext_resource path="res://ControlView.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=2]
radius = 50.0
height = 100.0

[sub_resource type="SphereMesh" id=3]
radius = 10.0
height = 20.0

[sub_resource type="SphereMesh" id=4]
radius = 50.0
height = 100.0

[sub_resource type="SphereMesh" id=5]
radius = 10.0
height = 20.0

[node name="ControlView" type="Panel"]
margin_right = 227.0
margin_bottom = 111.0
script = ExtResource( 1 )

[node name="LeftStickLimits" type="MeshInstance2D" parent="."]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )
position = Vector2( 56.603, 53.9616 )
mesh = SubResource( 2 )

[node name="LeftStickAxis" type="MeshInstance2D" parent="LeftStickLimits"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )
mesh = SubResource( 3 )

[node name="RightStickLimits" type="MeshInstance2D" parent="."]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )
position = Vector2( 167.545, 55.0936 )
mesh = SubResource( 4 )

[node name="RightStickAxis" type="MeshInstance2D" parent="RightStickLimits"]
modulate = Color( 0.407843, 0.407843, 0.407843, 1 )
mesh = SubResource( 5 )
